--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,17 +3,18 @@
 @tailwind utilities;
 
 ::-webkit-scrollbar {
-  width: 0.8rem;
+  width: 1.2rem;
 }
 
 ::-webkit-scrollbar-track {
-  @apply bg-custom-primary;
+  /* @apply bg-custom-primary; */
+  background-color: #1a1a36;
+  padding: 5px;
+  margin-block: 2px;
 }
 
 ::-webkit-scrollbar-thumb {
-  @apply bg-custom-primary3 m-2;
-  /* color: #211c43; */
-}
-
-::-webkit-scrollbar-thumb:hover {
+  background-color: #30305f;
+  border: #1a1a36 2px solid;
+  /* border: black 2px solid; */
 }
